# SemanticSceneGraphVis

./: README.md  pyproject.toml  setup.py
vis/: box_annotator.py  cg_dataclass.py  chat_agent.py  chat_history.py  gui_fsm.py  vis_with_viser.py
vis/conf/: visualizer.yaml
vis/conf/agent/: agent.yaml
vis/conf/agent/llm/: openai_gpt4.yaml
vis/conf/paths/: local.yaml
vis/core/: __init__.py  color.py  floor.py  seed.py  segmentation.py
vis/docs/: VIS_SPINOFF_PLAN.md  VIS_SPINOFF_WORKFILE.md
