[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vis"
version = "0.1.0"
description = "Standalone visualization app extracted from concept-graphs"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "hydra-core",
    "langchain",
    "langchain_openai",
    "matplotlib",
    "numpy<=1.26.4",
    "open3d",
    "openai",
    "omegaconf",
    "viser",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["vis*"]
